axd-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: axd-redis
  labels:
    kube-svc: axd-redis
spec:
  type: NodePort
  ports:
  - name: http
    port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    kube-app: axd-redis

---
# Source: ack-springcloud-turbine/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: axd-redis
  labels:
    kube-app: axd-redis
spec:
  replicas:  1
  revisionHistoryLimit:
  template:
    metadata:
      labels:
        kube-app: axd-redis
    spec:
      containers:
      - name: axd-redis
        image: redis
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 6379
          protocol: TCP
