jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-ci
  name: jenkins-ci
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins-ci
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 47.107.218.63
